# goate

./: .dockerignore  .gitignore  .golangci.yml  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  build.go  docker-compose.debug.yml  docker-compose.yml  go.mod  go.sum  index.html  install.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docker-lint.yml  lint.yml
client/: main.go
cmd/: BUILD.bazel  config.go  main.go
cmd/gateway-server/: BUILD.bazel  gateway.go  server.go
configs/app/: local.yml
database/DDL/: MySql.sql
docs/api_specs/: swagger.yaml
internal/service/: BUILD.bazel  userservice.go
internal/userstore/: localuserstore.go
internal/validator/: BUILD.bazel  validator.go
pkg/entitled/: spanner_entitler.go
pkg/proto/: BUILD.bazel  entitler_api.pb.go  entitler_types.pb.go  goate_api.pb.go  goate_api.pb.gw.go  goate_types.pb.go  grpclab_api.pb.go  grpclab_api.pb.gw.go  grpclab_types.pb.go
pkg/store/: BUILD.bazel  userstore.go
pkg/store/implementations/: BUILD.bazel  config.go
pkg/store/implementations/localstore/: BUILD.bazel  localstore.go
pkg/store/implementations/mysqlstore/: BUILD.bazel  config.go  mysqlstore.go
pkg/types/: BUILD.bazel  user.go
proto/: BUILD.bazel  entitler_api.proto  entitler_types.proto  goate_api.proto  goate_types.proto  grpclab_api.proto  grpclab_types.proto
server/: main.go
