load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/user3301/grpclab/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/gateway-server",
        "//internal/service",
        "//internal/validator",
        "//pkg/store",
        "//pkg/store/implementations",
        "//vendor/gopkg.in/yaml.v2:yaml_v2",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
